fix : the social media links

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <nav class="social-links">
           <ul>
             <li>
-              <a href="#" title="github-social-media"
+              <a href="https://github.com/lannisterrr/cerebrumUI" title="github-social-media" target="_blank"
                 ><i class="fab fa-github fa-2x t-c-3"></i
               ></a>
             </li>
             <li>
-              <a href="#" title="twitter-social-media"
+              <a href="https://twitter.com/siddhantjs" title="twitter-social-media" target="_blank"
                 ><i class="fab fa-twitter fa-2x t-c-3"></i
               ></a>
             </li>
             <li>
-              <a href="#" title="linkedin-social-media"
+              <a href="https://www.linkedin.com/in/siddhant4real/" title="linkedin-social-media" target="_blank"
                 ><i class="fab fa-linkedin fa-2x t-c-3"></i
               ></a>
             </li>
