--- a/index.html
+++ b/index.html
@@ -96,18 +96,10 @@
             </p>
             <div className="code-snippet centered-row ">
               <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=764&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=36px&ph=51px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fcerebrumui.netlify.app%252Fcerebrum.css%2522%2520%252F%253E"
-                style="
-                  width: 100%;
-                  height: 148px;
-                  border: 0;
-                  transform: scale(1);
-                  overflow: hidden;
-                "
-                sandbox="allow-scripts allow-same-origin"
-                scrolling="no"
-              >
-              </iframe>
+  src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=vscode&wt=sharp&l=htmlmixed&width=429&ds=false&dsyoff=20px&dsblur=81px&wc=true&wa=true&pv=65px&ph=38px&ln=false&fl=1&fm=Hack&fs=14px&lh=111%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fcerebrumui.netlify.app%252Fstyle.css%2522%2520%252F%253E"
+  style="width: 100%; height: 220px; border:0; transform: scale(1); overflow:hidden;"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>          
             </div>
             <h3 class="heading-4 t-c-3">Design Sytem Terminology</h3>
             <ul class="m-v-3">
